--- a/sonar-pmd-plugin/pom.xml
+++ b/sonar-pmd-plugin/pom.xml
@@ -38,6 +38,13 @@
   </developers>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.alibaba.p3c/p3c-pmd -->
+    <dependency>
+      <groupId>com.alibaba.p3c</groupId>
+      <artifactId>p3c-pmd</artifactId>
+      <version>1.3.6</version>
+    </dependency>
+
     <dependency>
       <groupId>org.sonarsource.sonarqube</groupId>
       <artifactId>sonar-plugin-api</artifactId>
