--- a/pom.xml
+++ b/pom.xml
@@ -60,16 +60,21 @@
   <properties>
     <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
 
-    <pmd.version>5.4.2</pmd.version>
+    <pmd.version>5.5.2</pmd.version>
     <junit.jupiter.version>5.3.1</junit.jupiter.version>
   </properties>
 
   <dependencies>
     <dependency>
+      <groupId>com.alibaba.p3c</groupId>
+      <artifactId>p3c-pmd</artifactId>
+      <version>1.3.6</version>
+    </dependency>
+    <dependency>
       <groupId>org.sonarsource.sonarqube</groupId>
       <artifactId>sonar-plugin-api</artifactId>
       <scope>provided</scope>
-      <version>7.4</version>
+      <version>6.7</version>
       <exclusions>
         <exclusion>
           <groupId>xml-apis</groupId>
@@ -220,7 +225,7 @@
             <configuration>
               <rules>
                 <requireFilesSize>
-                  <maxsize>7000000</maxsize>
+                  <maxsize>70000000</maxsize>
                   <minsize>4200000</minsize>
                   <files>
                     <file>${project.build.directory}/${project.build.finalName}.jar</file>
